--- a/example/index.html
+++ b/example/index.html
@@ -8,7 +8,11 @@
 <body>
   <h1>Font Awesome Stylus</h1>
   <h2>Example</h2>
+
+  icon
   <i class="fa fa-user"></i>
+
+  mixin
   <div class="my-icon"></div>
 </body>
 </html>
